--- a/app/templates/coltest.html
+++ b/app/templates/coltest.html
@@ -16,12 +16,12 @@
                 return vars;
             }
         $(document).ready(function(){
-            runQuery = function(cursor){
+            runQuery = function(offset){
                     $(".loading").show();
                     //$(".inner").hide()
                     var val = $('.search').val();
                     var vars = {'s':val}
-                    if (cursor) { vars['cursor'] = cursor };
+                    if (offset) { vars['offset'] = offset };
                     $.post("/col/search",vars,function(data){
                         $('.inner').html("").append($("<div class='time'></div>"));
                         $('.inner .time').html("Query time: "+data.time+" sec");
@@ -47,11 +47,17 @@
                             ndiv.append(nms);
                             $('.inner').append(ndiv);
                         });
-                        if (data.cursor) {
-                            $('.inner .time').append("<button id='next' name='next' value='"+data.cursor+"'>Next</button>");
-                            $(".inner button").click(function(){
+                        if (data.next) {
+                            $('.inner .time').append("<button id='next' name='next' value='"+data.next+"'>Next</button>");
+                            $(".inner button#next").click(function(){
                                 runQuery($(".inner #next").val());
                             })
+                            if (data.next > 10){
+                            $('.inner .time').append("<button id='last' name='last' value='"+(data.next - 20)+"'>Last</button>");
+                            $(".inner button#last").click(function(){
+                                runQuery($(".inner #last").val());
+                            })
+                            }
                         }
                         $(".loading").hide(20);
                         $(".inner").show()
