cleaned up taxonomy api code, changed api url to /api/taxonomy. added minor memcache support at the taxonomy search level

--- a/app/static/coltest.css
+++ b/app/static/coltest.css
@@ -60,3 +60,11 @@ body {
 .time button{
     float: right;
 }
+.limit{
+    float: right;
+    font-size: 0.75em;
+    margin-right: 5px;
+    margin-left: 5px;
+    color: #fe432e;
+    cursor: pointer;
+}
