--- a/app/templates/maptest.html
+++ b/app/templates/maptest.html
@@ -1,23 +1,67 @@
-<html>
-<head>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script> 
-    <script type="text/javascript" src="/static/coltest.js"></script> 
-    <link rel="stylesheet" type="text/css" href="/static/coltest.css" /> 
+<html> 
+<head> 
+<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script> 
+<script type="text/javascript"> 
+var map;
+var specid = '00';
+var mapMinZoom = 3;
+var mapMaxZoom = 10;
 
+function QuadTree( tx, ty, zoom ){
+    var quadKey = ""
+    ty = (Math.pow(2,zoom) - 1) - ty;
+    var i = zoom;
+    while (i > 0){
+        var digit = 0;
+        var mask = Math.pow(2,(i-1))
+        if ((tx & mask) != 0){
+            digit++;
+        }
+        if ((ty & mask) != 0){
+            digit = digit + 2;
+        }
+        quadKey = quadKey + digit.toString();
+        i = i-1;
+    }
+    console.log(quadKey);
+    return quadKey;
+}
+        
+function load() {
+  var latlng = new google.maps.LatLng(17.4419, -102.1419);
+  var myOptions = {
+      zoom: 3,
+      center: latlng,
+      mapTypeId: google.maps.MapTypeId.TERRAIN
+    };
+  map = new google.maps.Map(document.getElementById("map"), myOptions);  
+
+  var rangeOverlay = new google.maps.ImageMapType({
+    getTileUrl: function(tile, zoom) {
+        var numTiles = 1 << zoom;
+        
+        // Don't wrap tiles vertically or horizontally.
+        if (tile.y < 0 || tile.y >= numTiles || tile.x < 0 || tile.x >= numTiles) { return null };
+        if (zoom < mapMinZoom) { return null };
+        if (zoom > mapMaxZoom) { return null };
+        //x y z
+        var q = QuadTree(tile.x,tile.y,zoom);
+        //var q = '210';
+        var url = "/api/tile/" + specid +"/"+q+".png";
+        return url;
+    },
+    tileSize: new google.maps.Size(256, 256),
+    opacity:0.80,
+    isPng: true
+  });
+  
+  //map.addOverlay(tileLayerOverlay); 
+  map.overlayMapTypes.push(rangeOverlay); // create empty overlay entry
+  
+}
+window.onload = load;
+</script>
 </head>
-<body>
-<div id="container">
-<div id="search">
-    COL Search: <input type="text" class="search" name="s" id="colsearch"/><div class="loading"><img src="/static/loading-small.gif" /></div>
-</div>
-<div id="results">
-    <div class="inner">
-        <div class="time"></div>
-        <div class="species"></div>
-        <div class="taxonomy"></div>
-        <div class="names"></div>
-    </div>
-</div>
-</div>
+<body >
+ <div id="map" style="width: 80%; height: 500px; float:left"></div> 
 </body>
-</html>
