--- a/app/templates/maptest.html
+++ b/app/templates/maptest.html
@@ -3,7 +3,7 @@
 <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script> 
 <script type="text/javascript"> 
 var map;
-var specid = '00';
+var specid = '1001';
 var mapMinZoom = 0;
 var mapMaxZoom = 10;
 
@@ -47,7 +47,7 @@ function load() {
         //x y z
         var q = QuadTree(tile.x,tile.y,zoom);
         //var q = '210';
-        var url = "/api/tile/" + specid +"/"+q+".png";
+        var url = "/api/tile/" + specid +"/"+q+"/pa.png";
         return url;
     },
     tileSize: new google.maps.Size(256, 256),
