--- a/app/templates/maptest.html
+++ b/app/templates/maptest.html
@@ -3,7 +3,7 @@
 <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script> 
 <script type="text/javascript"> 
 var map;
-var specid = '1001';
+var specid = window.location.hash.substr(1);
 var mapMinZoom = 0;
 var mapMaxZoom = 10;
 
