--- a/homepage/stylesheets/style.css
+++ b/homepage/stylesheets/style.css
@@ -1,6 +1,6 @@
 body { font-family: ‘Palatino Linotype’, ‘Book Antiqua’, Palatino, serif; 
     min-width: 860px; margin: 0px; height: 100%; width: 100%; background: #232323; }
-div#header { padding: 15px; width: 100%; height: auto; color: #fff; font-size: 50px; font-weight: bold;}
+div#header { padding-top: 15px; padding-bottom: 15px; width: 100%; height: auto; color: #fff; font-size: 50px; font-weight: bold;}
 div#container { background: #ceff84; float: left; width: 100%; height: 100%;}
 div#content_top{ text-align: center; padding: 10px; color: #333; font-size: 22px;}
 div#content_bottom{ text-align: center; padding: 10px; color: #333; font-size: 22px;}
@@ -11,11 +11,105 @@ div#block_title { margin-left: 10px; margin-right: 10px; float: left; text-align
 div#feeds, div#about { overflow: hidden; margin: 10px; float: left; text-align: justify; padding: 1px; color: #333; font-size: 18px; height: 300px; width: 400px; }
 div#map_canvas { float: left; width: 100%; height: 200px; padding: 0px; margin: 0px;}
 div#tweets { margin-top: 5px; padding: 15px; width: 100%; height: auto; color: #fff; font-size: 12px;}
-div#footer { text-align: center; margin-top: 5px; padding: 15px; width: 100%; height: auto; color: #fff; font-size: 12px;}
+div#footer { text-align: right; padding-top: 15px; right-left: 45px; width: 90%; height: auto; color: #fff; font-size: 16px;}
+div#footer a { color: #fff; padding-left: 15px; padding-right: 15px; text-decoration: none; }
 
-div#dump{
-    background: #88c134; /* for non-css3 browsers */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#91e512', endColorstr='#88c134'); /* for IE */
-    background: -webkit-gradient(linear, left top, left bottom, from(#91e512), to(#88c134)); /* for webkit browsers */
-    background: -moz-linear-gradient(top,  #91e512,  #88c134); /* for firefox 3.6+ */
+/* GRITTER STYLES */
+/* ie6 trash */
+* html #gritter-notice-wrapper {
+	position:absolute; 
+}
+* html .gritter-top {
+	margin-bottom:-10px;
+}
+* html .gritter-item {
+	padding-bottom:0;
+}
+* html .gritter-bottom {
+	margin-bottom:0;
+}
+* html .gritter-close {
+	background:url(../images/gritter-close-ie6.gif);
+	width:22px;
+	height:22px;
+	top:7px;
+	left:7px;
+}
+
+/* the norm */
+#gritter-notice-wrapper {
+    background: #1d1d1d;
+    filter: alpha(opacity=85);
+    opacity: 0.85;
+	-moz-opacity:0.85;
+	-khtml-opacity: 0.85;
+	position:fixed;
+	top:140px;
+	left:20px;
+	width:701px;
+	z-index:9999;
+}
+.gritter-item-wrapper {
+	position:relative;
+	margin:0 0 10px 0;
+	background:url('.'); /* ie7/8 fix */ 
+}
+.gritter-top {
+	background:url(../images/gritter.png) no-repeat left -30px;
+	height:10px;
+}
+.hover .gritter-top {
+	background-position:right -30px;
+}
+.gritter-bottom {
+	background:url(../images/gritter.png) no-repeat left bottom;
+	height:8px;
+	margin:0;
+}
+.hover .gritter-bottom {
+	background-position: bottom right;
+}
+.gritter-item {
+	display:block;
+	background:url(../images/gritter.png) no-repeat left -40px;
+	color:#eee;
+	padding:2px 11px 8px 11px;
+	font-size: 24px;
+	font-family:verdana;
+}
+.hover .gritter-item {
+	background-position:right -40px;
+}
+.gritter-item p {
+	padding:0;
+	margin:0;
+}
+.gritter-close {
+	position:absolute;
+	top:5px;
+	left:3px;
+	background:url(../images/gritter.png) no-repeat left top;
+	cursor:pointer;
+	width:30px;
+	height:30px;
+}
+.gritter-title {
+	font-size:34px;
+	font-weight:bold;
+	padding:0 0 7px 0;
+	display:block;
+	text-shadow:1px 1px #000; /* Not supported by IE :( */
+}
+.gritter-image {
+	width:48px;
+	height:48px;
+	float:left;
+}
+.gritter-with-image,
+.gritter-without-image {
+	padding:0 0 5px 0;
+}
+.gritter-with-image {
+	width:220px;
+	float:right;
 }
