--- a/homepage/stylesheets/style.css
+++ b/homepage/stylesheets/style.css
@@ -6,6 +6,7 @@ div#container { background: #ceff84; float: left; width: 100%; height: 100%;}
 div#content_top{ text-align: center; padding: 10px; color: #333; font-size: 22px;}
 div#content_bottom{ text-align: center; padding: 10px; color: #333; font-size: 22px;}
 div#main_links { width: 790px ; margin-left: auto ; margin-right: auto ; }
+div#button_link { border: none; }
 div#text_blocks { width: 860px ; margin-left: auto ; margin-right: auto ; }
 img.main_link { margin: 20px; float: left; width: 350px; height: 100px; border: none; }
 div#block_title { margin-left: 10px; margin-right: 10px; float: left; text-align: left; padding: 1px; color: #111; font-size: 24px; width: 400px; }
