--- a/homepage/stylesheets/style.css
+++ b/homepage/stylesheets/style.css
@@ -4,17 +4,24 @@ div#header { padding-top: 15px; padding-bottom: 15px; width: 100%; height: auto;
 div#header #title{ padding-left: 30px; font-variant: small-caps; }
 div#container { background: #ceff84; float: left; width: 100%; height: 100%;}
 div#content_top{ text-align: center; padding: 10px; color: #333; font-size: 22px;}
-div#content_bottom{ text-align: center; padding: 10px; color: #333; font-size: 22px;}
+div#map_canvas { float: left; width: 100%; height: 200px; padding: 0px; margin: 0px;}
+
+div#content_middle { float: left; width: 95%; text-align: center; margin-left: auto; margin-right: auto; padding: 10px; color: #333; font-size: 22px;}
 div#main_links { width: 790px ; margin-left: auto ; margin-right: auto ; }
 div#button_link { border: none; }
 div#text_blocks { width: 860px ; margin-left: auto ; margin-right: auto ; }
 img.main_link { margin: 20px; float: left; width: 350px; height: 100px; border: none; }
-div#block_title { margin-left: 10px; margin-right: 10px; float: left; text-align: left; padding: 1px; color: #111; font-size: 24px; width: 400px; }
-div#feeds, div#about { overflow: hidden; margin: 10px; float: left; text-align: justify; padding: 1px; color: #333; font-size: 18px; height: 300px; width: 400px; }
-div#map_canvas { float: left; width: 100%; height: 200px; padding: 0px; margin: 0px;}
-div#tweets { margin-top: 5px; padding: 15px; width: 100%; height: auto; color: #fff; font-size: 12px;}
-div#footer { text-align: right; padding-top: 15px; right-left: 45px; width: 90%; height: auto; color: #fff; font-size: 16px;}
-div#footer a { color: #fff; padding-left: 15px; padding-right: 15px; text-decoration: none; }
+div#block_title { margin-left: 10px; margin-right: 10px; float: left; text-align: left; padding: 1px; color: #111; font-size: 24px; width: 260px; }
+
+/* div#blog, div#about { overflow: hidden; margin: 10px; float: left; text-align: justify; padding: 1px; color: #333; font-size: 18px; height: 300px; width: 400px; } */
+div#blog, div#about, div#code { overflow: hidden; margin: 10px; float: left; text-align: left; padding: 1px; color: #333; font-size: 16px; height: 300px; width: 260px; }
+
+div.gfc-resultsHeader{ border: none; }
+
+dif#footer {width: 90%; margin-top: 20px;}
+div#footer_links { float: right; text-align: left; padding-left: 45px; height: auto; color: #fff; }
+div#footer_links a { font-size: 12px; color: #aaa; padding-right: 8px; padding-left: 8px; line-height: 150%; text-decoration: underline;}
+
 
 /* GRITTER STYLES */
 /* ie6 trash */
