Updated COL results table and fixed unicode rendering bug

--- a/app/templates/pager.html
+++ b/app/templates/pager.html
@@ -31,7 +31,7 @@
     <script>
     google.load('visualization', '1', {'packages' : ['table']});
     google.setOnLoadCallback(init);
-    var dataSourceUrl = 'http://col.latest.mol-lab.appspot.com/api/taxonomy';
+    var dataSourceUrl = '/api/taxonomy';
     var query, options, container, submitButton;
 	
     // Some setup:
