--- a/homepage/stylesheets/style.css
+++ b/homepage/stylesheets/style.css
@@ -1,20 +1,28 @@
 body { font-family: ‘Palatino Linotype’, ‘Book Antiqua’, Palatino, serif; 
     min-width: 860px; margin: 0px; height: 100%; width: 100%; background: #232323; }
-div#header { padding-top: 15px; padding-bottom: 15px; width: 100%; height: auto; color: #fff; font-size: 60px; font-weight: bold;}
+div#header { padding-top: 15px; padding-bottom: 15px; width: 100%; height: 70px; color: #fff; font-size: 60px; font-weight: bold;}
 div#header #title{ padding-left: 30px; font-variant: small-caps; }
-div#container { background: #ceff84; float: left; width: 100%; height: 100%;}
-div#content_top{ text-align: center; padding: 10px; color: #333; font-size: 22px;}
+
+div#container { 
+float: left; width: 100%; height: 100%;
+background-color: #b8fd85; color: #111; 
+}
+
+div#content_top{ text-align: center; padding: 10px; font-size: 22px;}
+
 div#map_canvas { float: left; width: 100%; height: 200px; padding: 0px; margin: 0px;}
 
-div#content_middle { float: left; width: 95%; text-align: center; margin-left: auto; margin-right: auto; padding: 10px; color: #333; font-size: 22px;}
+
+div#content_middle { float: left; width: 95%; text-align: center; margin-left: auto; margin-right: auto; padding: 10px; font-size: 22px;}
 div#main_links { width: 690px ; margin-left: auto ; margin-right: auto ; }
 div#button_link { border: none; }
-div#text_blocks { width: 860px ; margin-left: auto ; margin-right: auto ; }
-img.main_link { margin: 20px; float: left; width: 280px; height: 80px; border: none; }
-div#block_title { margin-left: 10px; margin-right: 10px; float: left; text-align: left; padding: 1px; color: #111; font-size: 24px; width: 260px; }
 
+img.main_link { margin: 20px; float: left; width: 280px; height: 80px; border: none; }
+div#block_title { margin-left: 5px; margin-right: 5px; float: left; text-align: center; padding: 1px; color: #111; font-size: 24px; width: 240px; }
+
+div#text_blocks { width: 780px; margin-left: auto; margin-right: auto;}
 /* div#blog, div#about { overflow: hidden; margin: 10px; float: left; text-align: justify; padding: 1px; color: #333; font-size: 18px; height: 300px; width: 400px; } */
-div#blog, div#about, div#code { overflow: hidden; margin: 10px; float: left; text-align: left; padding: 1px; color: #333; font-size: 16px; height: 295px; width: 260px; }
+div#blog, div#about, div#code { overflow: hidden; margin: 5px; float: left; text-align: left; padding: 1px; font-size: 16px; height: 295px; width: 240px; }
 
 div.gfc-resultsHeader{ border: none; }
 
