Range maps viewable from COL search results

--- a/app/templates/pager.html
+++ b/app/templates/pager.html
@@ -24,7 +24,7 @@
 	top: 53px;
 }
 </style>
-<script src="https://www.google.com/jsapi"></script>
+<script src="http://www.google.com/jsapi"></script>
 <script src="../static/tablequerywrapper.js"></script>
 </head>
 <body style="font: 75% Lucida Grande, Trebuchet MS">
