--- a/app/templates/rangemap.html
+++ b/app/templates/rangemap.html
@@ -50,6 +50,7 @@ app.rangMapType = new google.maps.ImageMapType({
     },
     tileSize: new google.maps.Size(256, 256),
     isPng: true,
+    opacity: 0.5,
 });
 
 /**
