URL decode the q parameter before displaying it

--- a/app/templates/pager.html
+++ b/app/templates/pager.html
@@ -115,7 +115,7 @@ app.setupPage = function(query) {
         if (q == null) {
             return;
         }
-        $('queryText').value = q;
+        $('queryText').value = decodeURIComponent(q);
         setOption('gql', q);
     } else {
         $('queryText').value = query;  
