Button now says 'Search' instead of 'Search Catalog of Life'

--- a/app/templates/pager.html
+++ b/app/templates/pager.html
@@ -30,7 +30,7 @@
 <body style="font: 75% Lucida Grande, Trebuchet MS">
 <div id='mol'>Map of Life</div><br>
 <input type='search' id='queryText' style="width: 300px;">        
-<button id='submitButton' value="submit" type="submit">Search Catalog of Life</button>
+<button id='submitButton' value="submit" type="submit">Search</button>
         
 
 <p>
