Potential FireFox fix for Visualization API request ID error

--- a/app/templates/pager.html
+++ b/app/templates/pager.html
@@ -35,7 +35,7 @@
 }
 
 </style>
-<script src="http://www.google.com/jsapi"></script>
+<script src="https://www.google.com/jsapi"></script>
 <script src="../static/tablequerywrapper.js"></script>
 </head>
 <body style="font: 75% Lucida Grande, Trebuchet MS">
