Removed COL name from search UI

--- a/app/templates/pager.html
+++ b/app/templates/pager.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Catalog of Life - Search Interface</title>
+<title>Map of Life - Prototype Search</title>
 <link href='http://fonts.googleapis.com/css?family=Josefin+Sans'
     rel='stylesheet' type='text/css'>
 <style>
