Removed COL from title

--- a/app/templates/rangemap.html
+++ b/app/templates/rangemap.html
@@ -3,7 +3,7 @@
 <head> 
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/> 
 <meta charset="utf-8" />
-<title>Catalog of Life - Range Map Interface</title>
+<title>Map of Life - Range Maps</title>
 <link href="http://code.google.com/apis/maps/documentation/javascript/examples/standard.css" 
       rel="stylesheet" type="text/css" /> 
 <link href='http://fonts.googleapis.com/css?family=Josefin+Sans'
