--- a/app/templates/rangemap.html
+++ b/app/templates/rangemap.html
@@ -22,6 +22,7 @@
     line-height: 1.17;
 }
 </style>
+<script src="../js/mol.js"></script>
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 </head> 
