--- a/app/css/layer.widget.css
+++ b/app/css/layer.widget.css
@@ -79,6 +79,13 @@ body {
 
 #layers #add_new_layer_dialog {
     height: 0px;
+    text-align: center;
+    color: #121212;
+    padding: 5px;
+    visibility: hidden;
+}
+#layers #add_new_layer_dialog a{
+    color: #121212;
 }
 
 #layers #add_new_layer_dialog button{
