working add/delete layer method with radio

--- a/app/css/layer.widget.css
+++ b/app/css/layer.widget.css
@@ -60,6 +60,7 @@
 
 #widget-container {
 	width: 260px;
+    font-weight:bold;
     /* text-align: left; */
     /* margin-top: 100px; */
     /* margin-left: auto; */
