--- a/app/css/layer.widget.css
+++ b/app/css/layer.widget.css
@@ -83,19 +83,19 @@
     /* background: #fefefe; */
 }
 
-#layers .list {
+#layers .list, .menu{
     color: #141414;
     background-image: -webkit-gradient(
         linear,
         left bottom,
         left top,
-        color-stop(0.37, rgba(120,120,120,0.5)),
-        color-stop(0.69, rgba(219,219,219,0.5))
+        color-stop(0.37, rgba(120,120,120,0.65)),
+        color-stop(0.69, rgba(219,219,219,0.65))
     );
     background-image: -moz-linear-gradient(
         center bottom,
-        rgba(120,120,120,0.5) 37%,
-        rgba(219,219,219,0.5) 69%
+        rgba(120,120,120,0.65) 37%,
+        rgba(219,219,219,0.65) 69%
     );
     margin: 2px 2px 2px 2px;
     padding: 1px 0px 1px 2px;
@@ -150,7 +150,7 @@
   display: block;
   width: 22%;
   margin-right: 1%;
-  float: left;
+  float: right;
   text-align: center;
 }
 
