--- a/app/css/layer.widget.css
+++ b/app/css/layer.widget.css
@@ -1,109 +1,180 @@
 
 #widget-container {
-	width: 260px;
+    float: left;
+    display: block;
+    margin-top: -11px;
+	width: 290px;
+    height: auto;
+    font-family: Arial, sans-serif;
     font-weight:700;
-    font-size: 18px;
-    /* text-align: left; */
-    /* margin-top: 100px; */
-    /* margin-left: auto; */
-	/* margin-right: auto; */
-    /* background: #fefefe; */
-    /* height: auto; */
-    /* padding-right: 2px; */
-    /* padding-bottom: 2px; */
-}
-
-#layers {
-    padding-top: 2px;
-    /* width: 100%; */
-    /* background: #fefefe; */
-    /* color: #252525; */
-}
-
-#layers #list {
-    /* width: 100%; */
-    /* background: #fefefe; */
-}
-
-#layers .list, .menu{
     color: #141414;
+}
+#layers #list{
+    height: auto;
+}
+#layers #menu{
+    float: left;
+    width: 100%;
+}
+/* ADD, DELETE Menu setup */
+#layers .list{
+    list-style-type: none;
     background-image: -webkit-gradient(
         linear,
         left bottom,
         left top,
-        color-stop(0.37, rgba(120,120,120,0.65)),
-        color-stop(0.69, rgba(219,219,219,0.65))
+        color-stop(0.37, rgba(184, 253, 133,0.65)),
+        color-stop(0.69, rgba(92,214,7,0.65))
     );
     background-image: -moz-linear-gradient(
         center bottom,
-        rgba(120,120,120,0.65) 37%,
-        rgba(219,219,219,0.65) 69%
+        rgba(184, 253, 133,0.65) 37%,
+        rgba(92,214,7,0.65) 69%
     );
-    margin: 2px 2px 2px 2px;
-    padding: 1px 0px 1px 2px;
-    border: 1px solid #333333;
-    -moz-box-shadow: 2px 2px 5px #222;
-    -webkit-box-shadow: 2px 2px 5px #222;
-    box-shadow: 2px 2px 5px #222;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.347656) 2px 2px 3px; 
+    box-shadow: rgba(0, 0, 0, 0.347656) 2px 2px 3px; 
 }
-
-#layers .layer {
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    cursor: move;
-}
-
-#layers #add_new_layer_dialog {
-    height: 0px;
-    text-align: center;
-    color: #121212;
-    padding: 5px;
-    visibility: hidden;
-}
-#layers #add_new_layer_dialog a{
-    color: #121212;
-}
-
-#layers #add_new_layer_dialog button{
-    width: 99%;
-    font-size: 1.1em;
-    color: #121212;
-}
-#layers .source {
-    font-size: 0.7em;
+#layers .option{
+    font-size: 12px;
     float: right;
-    padding: 2px;
-}
-
-#layers .list.options{
-    font-size: 0.85em;
-    height: 50px;
-    background: none;
-    border: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
     margin: 0px;
-    padding: 0px;
+    padding-top: 0px;
+    padding-right: 6px;
+    padding-left: 6px;
+    padding-bottom: 0px;
+    line-height: 170%;
+    text-align: center;
+}
+#layers #menuLabel.option{
+    -moz-border-radius-bottomleft: 3px;
+    border-bottom-left-radius: 3px;
+    -moz-border-radius-topleft: 3px;
+    border-top-left-radius: 3px;
+    border: 1px solid rgb(123, 136, 163);
+    border-right: none;
+}
+#layers #add.option{
+    border-top: 1px solid rgb(135, 165, 149);
+    border-bottom: 1px solid rgb(135, 165, 149);
+}
+#layers #delete.option{
+    -moz-border-radius-bottomright: 3px;
+    border-bottom-right-radius: 3px;
+    -moz-border-radius-topright: 3px;
+    border-top-right-radius: 3px;
+    border: 1px solid rgb(135, 165, 149);
+    border-left: none;
+}
+#layers #delete.option:hover {
+    background-color: rgb(255, 0, 0)
+}
+#layers #add.option:hover {
+    background-color: rgb(184, 255, 33)
+}
+#layers .option a{
+    text-decoration:none;
+    color: #141414;
+}
+#layers #menuLabel.option{
+    background-image: -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        color-stop(0.37, rgba(35, 35, 35,0.75)),
+        color-stop(0.69, rgba(66,66,66,0.75))
+    );
+    background-image: -moz-linear-gradient(
+        center bottom,
+        rgba(184, 253, 133,0.75) 37%,
+        rgba(92,214,7,0.75) 69%
+    );
+    border: 1px solid rgb(73, 73, 73);
+    color: rgb(240, 240, 260);
+}
+/* Add Layer Dialog Setup */
+
+#layers .dialog{
+    font-size: 12px;
+    float: right;
+    margin: 0px;
+    width: 100%;
+    padding-top: 2px;
+    padding-right: 6px;
+    padding-left: 6px;
+    padding-bottom: 2px;
+    line-height: 165%;
+    text-align: center;
+}
+#layers .dialog span{
+    float: left;
+    width: 100%;
+}
+#layers  button{
+    width: auto;
+    margin: 2px;
+    font-size: 1.1em;
+    font-weight:700;
+    color: rgb(240, 240, 260);
+    background-color: rgba(25, 25, 25, 0.75);
+    -moz-box-shadow: 2px 2px 5px #000;
+    -webkit-box-shadow: 2px 2px 5px #000;
+    box-shadow: 2px 2px 5px #222;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    border: none;
+}
+#layers  button:hover{
+    background-color: rgba(25, 25, 25, 1.0);
+    cursor: pointer;
 }
 
-#layers ul.list li {
-  list-style-type: none;
-  display: block;
-  width: 22%;
-  margin-right: 1%;
-  float: right;
-  text-align: center;
+#layers .layer{
+    font-size: 14px;
+    float: right;
+    margin: 0px;
+    width: 100%;
+    padding-top: 2px;
+    padding-right: 6px;
+    padding-left: 6px;
+    padding-bottom: 2px;
+    line-height: 165%;
+    text-align: center;
+}
+#layers .layer .leftCol{
+    float: left;
+    width: 20px;
+    margin-right: 5px;
+}
+#layers .layer input{
+    height: 20px;
+    width: 20px;
+    background-color: blue;
+}
+#layers .layer .source{
+    float: right;
+}
+#layers .layer .toggle{
+    float: right;
+    width: 20px;
+}
+#layers .layer .info{
+    float: right;
+    width: 20px;
+    height: 20px;
+    font-style:italic;
+    margin-right: 5px;
+}
+#layers .layer .title{
+    float: left;
+    font-size: 1.2em;
+}
+#layers .layer .error{
+    color: rgba(255, 255, 255, 0.80);
+    background-color: rgb(255,0,0);
+    width: 20px;
+    height: 20px;
+    float: right;
+    font-style:normal;
+    margin-right: 5px;
 }
 
-#layers ul.list li:hover {
-  background-color: #eee;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#888), color-stop(0.6, #aaa));
-}
-
-#layers ul.list li a {
-  display: block;
-  padding: .8em .5em .5em .4em;
-  text-decoration: none;
-  color: #000;
-}
